<?xml version="1.0"?>
<package>

  <name>omni_im</name>
  <version>0.1.0</version>
  <description>The omni_im package</description>

  <maintainer email="dane@danepowell.com">Dane Powell</maintainer>

  <license>BSD</license>
  <url type="website">http://ros.org/wiki/omni_im</url>

  <author>Dane Powell</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>interactive_markers</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>tf</build_depend>
  
  <run_depend>interactive_markers</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>tf</run_depend>

  <export>
  </export>
  
</package>
